# AeroTX-OS

./: CMakeLists.txt  README.md  TX01_DESIGN_V4.md  TX01_Hardware_V2_Plan.md  sdkconfig.defaults
.github/workflows/: cd_release.yml  ci_build.yml
components/ble_hid/: CMakeLists.txt  ble_hid.c  esp_hid_gap.c
components/ble_hid/include/: ble_hid.h  esp_hid_gap.h
components/nrf24/: CMakeLists.txt  nrf24.c
components/nrf24/include/: nrf24.h
components/rc_input/: CMakeLists.txt  rc_input.c
components/ui_display/: CMakeLists.txt  idf_component.yml  ui_display.c
components/ui_display/include/: ui_display.h  ui_types.h
components/ui_display/src/core/: ui_manager.c  ui_manager.h
components/ui_display/src/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
components/ui_display/src/screens/: scr_calibration.c  scr_calibration.h  scr_dashboard.c  scr_dashboard.h  scr_menu.c  scr_menu.h  scr_telemetry.c  scr_telemetry.h
components/ui_display/src/screens/menu/: menu_common.h  menu_pages.h
components/ui_display/src/screens/menu/pages/: page_calibration.c  page_fc_tune.c  page_inputs.c  page_rf_link.c  page_system.c
docs/: BLE_DEBUGGING_LOG.md
main/: CMakeLists.txt  Kconfig.projbuild  blink_example_main.c  joy_nav.c  joy_nav.h  main.c
main/core/: crsf.c  crsf.h  hal_input.c  hal_input.h  input_engine.c  input_filter.c  input_filter.h  storage_manager.c  sys_config.h  sys_state.h  timing_test.h  utils.c
main/tasks/: radio_task.c  sensor_task.c  ui_task.c
stable_checkpoint/: flasher_args.json
(+1 files in other folders)
